# pot-odds

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  api-spec.md  main.py  models.py  outs.md  outs_detector.py  poker.md  poker_engine.py  pot-odds.md  pot_odds_calculator.py  pyproject.toml
backend/tests/: test_api.py  test_models.py  test_outs_detector.py  test_poker_engine.py  test_pot_odds_calculator.py
frontend/: .prettierrc  Dockerfile  README.md  index.html  nginx-docker.conf  nginx-main.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  ui-spec.md  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/card-selection/: CardGrid.tsx  CommunityCardsSection.tsx  HoleCardsSection.tsx  ResetButton.tsx  UnifiedSelectedCards.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx  ResponsiveGrid.tsx
frontend/src/components/results/: OutsDisplay.tsx  PotOddsDisplay.tsx  ResultsPanel.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  ThemeToggle.tsx
frontend/src/hooks/: useDebounce.ts  usePotOdds.ts  useTheme.ts
frontend/src/store/: cardStore.ts  themeStore.ts
frontend/src/types/: api.ts  cards.ts  index.ts
frontend/src/utils/: api.ts  cards.ts  theme.ts
